...
            android:src="@drawable/lion_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_arrow_back"
            android:onClick="@{viewModel::onBackClicked}"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/lion_logo" />
...
            app:addTextChangedListener="@{viewModel.getPassword}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_instruction" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_45"
            android:layout_marginTop="@dimen/dimen_30"
            android:background="@{viewModel.isPasswordValid() ? @drawable/rounded_button_filled_blue : @drawable/rounded_corner_button}"
            android:clickable="@{viewModel.isPasswordValid() ? true : false}"
...
